Fix z-index from 9100 to 9400 originally converted from 1100
Corrected the wrong z-index as per these instructions:

900 to 9100,
950 to 9200,
1000 to 9300,
1100 to 9400

--- a/ionyweb/static/admin/css/ionyweb_admin.less
+++ b/ionyweb/static/admin/css/ionyweb_admin.less
@@ -100,7 +100,7 @@
 		
 		/* Each UL is a list of action in admin_tool_bar*/
 		ul.toolbar_menu{
-			z-index: 9100;
+			z-index: 9400;
 			/* Left menu, just after Modulo Logo */
 			&.left_menu{
 				float: left;
